[package]
name = "dfo"
version = "0.1.0-beta.1"
authors = ["Jérome Eertmans <jeertmans@icloud.com>"]
edition = "2021"
description = "Differentiable Floating-point Operations in Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jeertmans/dfo"
keywords = ["autodiff", "forward", "differentiation"]
include = ["src/**/*", "LICENSE.md", "README.md", "CHANGELOG.md"]
rust-version = "1.56.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
num-traits = { version = "0.2", default-features = false, optional = true }
serde = { version = "1.0", optional = true, default-features = false }

[features]
default = ["std", "num-traits"]
std = ["num-traits/std"]

[dev-dependencies]
concat-idents = "1.1.4"
ndarray = "0.15.0"
