[package]
name = "dfo"
version = "0.1.0-beta.5"
authors = ["Jérome Eertmans <jeertmans@icloud.com>"]
edition = "2021"
description = "Differentiable Floating-point Operations in Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jeertmans/dfo"
keywords = ["autodiff", "forward", "differentiation"]
include = ["src/**/*", "LICENSE.md", "README.md", "CHANGELOG.md"]
rust-version = "1.56.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
num-traits = { version = "0.2", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, optional = true }

[features]
default = ["std", "num-traits"]
libm = ["num-traits/libm"]
std = ["num-traits/std", "serde/std"]

[dev-dependencies]
autodiff = "0.6"
concat-idents = "1.1.4"
criterion = "0.4"
ndarray = "0.15.0"
num-traits = "0.2"
serde_json = "1.0"

[[bench]]
name = "bench_all"
path = "benches/bench_main.rs"
harness = false

[[bench]]
name = "compare_autodiff"
path = "benches/compare_autodiff.rs"
harness = false

[[bench]]
name = "measure_overhead"
path = "benches/measure_overhead.rs"
harness = false
